--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "node-sass": "^9.0.0",
     "react": "^18.2",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^18.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^5.0.1",
-    "react-scrollchor": "^6.0.0",
-    "react-sticky": "^6.0.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
