--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^18.2",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^18.2",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
