--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.16.7",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "node-sass": "^9.0.0",
     "react": "^18.2",
     "react-animated-slider": "^1.1.4",
